[package]
name = "rust-latte"
version = "0.1.0"
authors = ["Marek Puzyna <puzynamarek97@gmail.com>"]

build = "build.rs" # LALRPOP preprocessing

#[bin]
#name = "latc"
#path = "src/main.rs"

[dependencies]
lalrpop-util = "0.16.0"
regex = "1.0.5"
derive-new = "0.5"
derive-getters = "0.0.7"
colored = "1.7"

[build-dependencies]
lalrpop = "0.16.0"
